test/testdata/bool/not_callable_error.lox
true(); // error: 'bool' object is not callable
